Tab navigation for palette-items and vertical alignment fix for icons and links. https://gus.lightning.force.com/lightning/r/ADM_Work__c/a07B0000005YEOlIAO/view https://gus.lightning.force.com/lightning/r/ADM_Work__c/a07B0000005YzMzIAK/view #review-16566903 @rev priya.mittal@ @markfixed@ BLT: CLI local=false
@precheckin 16587449@

[git-p4: depot-paths = "//app/main/core/ui-interaction-builder-components/": change = 16588520]

--- a/packages/@flow-builder/ui/src/builder_platform_interaction/paletteItem/paletteItem.css
+++ b/packages/@flow-builder/ui/src/builder_platform_interaction/paletteItem/paletteItem.css
@@ -4,6 +4,6 @@
 
 /*TODO: Move decision icon svg styling from container.css to here (W-5278403)*/
 
-th {
+td:first-of-type {
     padding-left: 1.5rem !important;
 }
